objects/CMN_AppLog__c.object
<CustomObject>
    <description>The object stores all the logs generated from either Apex Code or process builder invocation class</description>
    <fields>
        <fullName>CMN_ClassMethod__c</fullName>
        <description>Source class and/or method event occured e.g. &lt;Class&gt;.&lt;Method&gt;</description>
        <label>Class Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ExceptionType__c</fullName>
        <description>Exception Class Type</description>
        <label>Exception Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ExecutionEvent__c</fullName>
        <description>A reflection of the Quiddity enumeration, which indicates which event resulted in the code being run; see: Request.getCurrent().getQuiddity().</description>
        <label>Execution Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ANONYMOUS</fullName>
                </value>
                <value>
                    <fullName>AURA</fullName>
                </value>
                <value>
                    <fullName>BATCH_ACS</fullName>
                </value>
                <value>
                    <fullName>BATCH_APEX</fullName>
                </value>
                <value>
                    <fullName>BATCH_CHUNK_PARALLEL</fullName>
                </value>
                <value>
                    <fullName>BATCH_CHUNK_SERIAL</fullName>
                </value>
                <value>
                    <fullName>BULK_API</fullName>
                </value>
                <value>
                    <fullName>COMMERCE_INTEGRATION</fullName>
                </value>
                <value>
                    <fullName>DISCOVERABLE_LOGIN</fullName>
                </value>
                <value>
                    <fullName>FUNCTION_CALLBACK</fullName>
                </value>
                <value>
                    <fullName>FUTURE</fullName>
                </value>
                <value>
                    <fullName>INBOUND_EMAIL_SERVICE</fullName>
                </value>
                <value>
                    <fullName>INVOCABLE_ACTION</fullName>
                </value>
                <value>
                    <fullName>IOT</fullName>
                </value>
                <value>
                    <fullName>QUEUEABLE</fullName>
                </value>
                <value>
                    <fullName>QUICK_ACTION</fullName>
                </value>
                <value>
                    <fullName>REMOTE_ACTION</fullName>
                </value>
                <value>
                    <fullName>REST</fullName>
                </value>
                <value>
                    <fullName>RUNTEST_ASYNC</fullName>
                </value>
                <value>
                    <fullName>RUNTEST_DEPLOY</fullName>
                </value>
                <value>
                    <fullName>RUNTEST_SYNC</fullName>
                </value>
                <value>
                    <fullName>SCHEDULED</fullName>
                </value>
                <value>
                    <fullName>SOAP</fullName>
                </value>
                <value>
                    <fullName>SYNCHRONOUS</fullName>
                </value>
                <value>
                    <fullName>TRANSACTION_FINALIZER_QUEUEABLE</fullName>
                </value>
                <value>
                    <fullName>VF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_Limits__c</fullName>
        <label>Limits</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMN_LineNumber__c</fullName>
        <description>Line Number of Exception</description>
        <label>Line Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMN_LogLevel__c</fullName>
        <description>Generally, INFO and ERROR are used</description>
        <label>LogLevel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEBUG</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMN_RecordId__c</fullName>
        <description>Id of object related to log event</description>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_RecordLink__c</fullName>
        <description>Convenient link to access the affected record directly from the record Id</description>
        <formula>HYPERLINK(&quot;/&quot; + CMN_RecordId__c , &quot;Open&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ShortMessage__c</fullName>
        <description>A logical short message or could be First 255 characters of the message. Should not contain sensitive data. Useful for SOQL WHERE clauses, and possibly GROUP BY</description>
        <label>Short Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_StackTrace__c</fullName>
        <label>StackTrace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMN_UserId__c</fullName>
        <description>The active user when the event occurred</description>
        <label>UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_UserLink__c</fullName>
        <description>Link to User Record which caused the event</description>
        <formula>HYPERLINK(&quot;/&quot; + CMN_UserId__c , &quot;Open&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View User</label>
        <type>Text</type>
    </fields>
    <label>App Log</label>
    <listViews>
        <fullName>CMN_AllAppLogs</fullName>
        <columns>NAME</columns>
        <columns>CMN_ClassMethod__c</columns>
        <columns>CMN_LogLevel__c</columns>
        <columns>CMN_ShortMessage__c</columns>
        <columns>CMN_Message__c</columns>
        <columns>CMN_UserId__c</columns>
        <columns>CMN_RecordId__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CMN_ExceptionType__c</columns>
        <columns>CMN_LineNumber__c</columns>
        <columns>CMN_StackTrace__c</columns>
        <columns>CMN_Limits__c</columns>
        <columns>CMN_RecordLink__c</columns>
        <columns>CMN_UserLink__c</columns>
        <filterScope>Everything</filterScope>
        <label>All App Logs</label>
    </listViews>
    <nameField>
        <displayFormat>L-{00000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>